# local-redact-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: documents.py
app/core/: __init__.py  config.py
app/services/: confidential_extractor.py  pdf_processor.py  pdf_redactor.py
docs/: architecture.md
local_redact_agent/: __init__.py  cli.py  fastapi.py  library.py
tests/: test_confidential_extractor.py  test_pdf_processor.py  test_pdf_redactor.py  test_upload_pdf.py
