[project]
name = "local-redact-agent"
version = "0.1.0"
description = "FastAPI service to upload and process PDF files locally."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "marker-pdf>=1.10.2",
  "pymupdf>=1.26.0",
  "pypdf>=5.5.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
